map side handling for reach procedure

--- a/src/ai/ai_msgs/CMakeLists.txt
+++ b/src/ai/ai_msgs/CMakeLists.txt
@@ -45,6 +45,7 @@ add_service_files(
   DeclareZone.srv
   ComputeActionPoint.srv
   SetSchedulerState.srv
+  GetMapSize.srv
   AwaitNodesRequest.srv
 )
 
