handling end of session

--- a/src/ai/ai_description/params.yaml
+++ b/src/ai/ai_description/params.yaml
@@ -3,14 +3,14 @@ pathfinder:
 
 robot:
   start:
-    x: 520
+    x: 475 # width 290 / 2 + 330 offset start
     y: 225 # width 360 + 90 to fill zone
     angle: 0
 
 actions:
-  main: "main"
-  timeout: 100 # in seconds
-  move_only_forward: true
+  main: "homolog"
+  timeout: 10 # in seconds
+  move_only_forward: false
   
 simulation: # 1 for Up, 0 for Down
   side: 0
